fix: navlink spacing

--- a/src/common/component/navbar/desktop/style.scss
+++ b/src/common/component/navbar/desktop/style.scss
@@ -18,12 +18,11 @@ align-self: center;
     flex-direction: row;  
 }
 .navlink{
-    // font-size: 3rem;
     text-decoration: none;
     color: #000;
-    padding: 0rem 2rem;
     height: 100%;
     transition: all .5s ease-in;
+    margin: 0rem 1.5rem;
 
     &:hover{
         text-decoration: underline; 
